// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button false"
  data-jsx={2876876518}
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button urgent text prefix 1`] = `
<button
  className="Button urgent"
  data-jsx={2876876518}
  onClick={[Function]}
>
  !Cancel
</button>
`;

exports[`Storyshots Button urgent text sufix 1`] = `
<button
  className="Button urgent"
  data-jsx={2876876518}
  onClick={[Function]}
>
  Cancel!
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button false"
  data-jsx={2876876518}
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Layout PageFrame 1`] = `
<div
  className="ScreenFrame"
  data-jsx={1508683191}
>
  <div
    className="PageFrame"
    data-jsx={988627274}
  >
    PageFrame
  </div>
</div>
`;

exports[`Storyshots Layout ScreenFrame 1`] = `
<div
  className="ScreenFrame"
  data-jsx={1508683191}
>
  ScreenFrame
</div>
`;

exports[`Storyshots Layout with Buttons 1`] = `
<div
  className="ScreenFrame"
  data-jsx={1508683191}
>
  <div
    className="PageFrame"
    data-jsx={988627274}
  >
    <button
      className="Button false"
      data-jsx={2876876518}
      onClick={[Function]}
    >
      Hello Component
    </button>
    <br />
    <br />
    <button
      className="Button urgent"
      data-jsx={2876876518}
      onClick={[Function]}
    >
      Hello Component!
    </button>
  </div>
</div>
`;
